<resources>
    <string name="app_name">DemoKotlin</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="sports">Sports</string>
    <string name="movies">Movies</string>
    <string name="username">Username</string>
    <string name="type_your_username">Type your username</string>
    <string name="fullname">Fullname</string>
    <string name="type_your_fullname">Type your fullname</string>
    <string name="register">Register</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="type_your_password_confirmation">Type your password confirmation</string>
    <string name="type_your_password">Type your password</string>
    <string name="password">Password</string>
    <string name="drawer_menu_edit_profile">Edit Profile</string>
    <string name="drawer_menu_channels">Channels</string>
    <string name="drawer_menu_chats">Chats</string>
    <string name="drawer_menu_contacts">Contacts</string>
    <string name="drawer_menu_help">Help</string>
    <string name="drawer_menu_logout">Logout</string>
    <string name="drawer_menu_usb">USB-UART</string>

    <string name="demo_glide">Glide</string>
    <string name="demo_image">Image</string>
    <string name="demo_snackbar">SnackBar</string>
    <string name="demo_toast">Toast</string>
    <string name="demo_spinner">Spinner</string>
    <string name="demo_maps">Maps</string>
    <string name="demo_video">Video</string>
    <string name="demo_settings">Settings</string>
    <string name="demo_splash">Splash</string>
    <string name="demo_ble">BLE</string>

    <string name="demo_custom_alert_dalog">Custom Alert Dialog</string>
    <string name="demo_custom_dialog">Custom Dialog</string>

    <string name="demo_webview_asset">WebView Asset</string>
    <string name="demo_webview_string">WebView String</string>
    <string name="demo_webview">WebView</string>
    <string name="demo_alert_dialog">Alert Dialog</string>
    <string name="demo_button_primary">Button Primary</string>
    <string name="demo_button_secondary">Button Secondary</string>
    <string name="demo_button_gray">Button Gray</string>
    <string name="demo_button_disabled">Button Disabled</string>
    <string name="demo_listview">ListView</string>
    <string name="demo_gridview">GridView</string>
    <string name="demo_http_get">HTTP GET</string>
    <string name="demo_login">Login</string>
    <string name="demo_bottom_navigation">Bottom Navigation</string>
    <string name="demo_recyclerview">RecyclerView</string>
    <string name="demo_clear_preferences">Clear Preferences</string>
    <string name="demo_tablayout">TabLayout</string>
    <string name="demo_logout">Logout</string>
    <string name="demo_share">Share</string>
    <string name="demo_generate_qr">Generate QR</string>
    <string name="demo_scan_qr">Scan QR</string>
    <string name="demo_take_photo">Take Photo</string>
    <string name="demo_date_picker">Date Picker</string>
    <string name="demo_image_picker">Image Picker</string>
    <string name="demo_register">Register</string>
    <string name="demo_time_picker">Time Picker</string>
    <string name="demo_viewpager">ViewPager</string>
    <string name="demo_bottomsheet">Bottom Sheet</string>
    <string name="demo_chat">Chat</string>
    <string name="demo_todo">TODO</string>
    <string name="demo_sidebar">Sidebar</string>
    <string name="demo_put_your_view_here">Put your view here</string>
    <string name="demo_save">Save</string>
    <string name="demo_cancel">Cancel</string>
    <string name="demo_ok">OK</string>

</resources>